# csver

./: .gitignore  Cargo.toml  README.md  t.csv  test.csv
src/: datastore.rs  main.rs  processor.rs  reader_writer.rs
src/domain/: datastore.rs  mod.rs  processor.rs
src/model/: account.rs  transaction.rs
