[package]
name = "csver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "^1.0.55", features = ["derive"] }
thiserror = "1.0.31"
decimal-rs = { version = "0.1.38", features = ["serde"] }
